Fix core client creation
- Configure a custom scope